# news-from-historical-people

./: .env.example  README.md  claude.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
api/: generate-best.ts  generate.ts  news.ts
backend/: .env.example  .gitignore  pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/api/services/: llm_service.py  news_service.py
backend/config/: settings.py  wsgi.py
src/: App.tsx  index.css
src/components/: CharacterSwitcher.tsx  HotTakeDisplay.tsx  LanguageSelector.tsx
src/components/decorations/: CornerFlourish.tsx  DividerFlourish.tsx  Quill.tsx  WaxSeal.tsx  index.ts
src/components/ui/: button.tsx  card.tsx  select.tsx
src/data/: figures.ts
src/lib/: api.ts  i18n.ts
